common_files/javaPrograms.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
}

/* Navbar */
nav{
    /* border: 2px solid red; */
    background: rgb(27, 21, 81);
    color: white;
    width: 100%;
    /* padding: 10px 0; */
    z-index: 1;
    position: sticky;
    top: 0;
    display: flex;
    align-items: center;
    justify-content: center;
}
nav ul{
    display: flex;
    flex-wrap: wrap;
    /* border: 2px solid red; */
    align-items: center;
    justify-content: space-between;
    /* margin: 0 2rem; */
    width: 90%;
}
nav ul li{
    list-style: none;
    display: flex;
    align-items: center;
    font-size: 1.5rem;
    /* border: 2px solid red; */
}
nav ul .languages{
    position: relative;
    height: 2rem;
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
}
nav ul .languages .courses{
    width: 100%;
    height: 100%;
    display: grid;
    place-items: center;
    font-size: 1rem;
    background-color: #fff;
    color: rgb(27, 21, 81);
    cursor: pointer;
    padding: 0 2rem;
}
nav ul .languages .options{
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    z-index: 1;
    display: none;
    flex-direction: column;
    /* border: 2px solid red; */
    list-style: none;
    background-color: #f1f1f1;
    transform: translateY(2rem);
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
}
nav ul .languages:hover .options, nav ul .languages:focus-within .options, nav ul .languages:active .options, .languages .courses:hover + .options, .languages .courses:focus-within + .options, .languages .courses:active + .options{
    display: flex;
}
nav ul .languages .options a {
    width: 100%;
    display: block;
    font-size: small;
    padding: 5px 0;
    text-decoration: none;
    color: rgb(27, 21, 81);
    transition: color 0.3s;
    padding: 5px 10px;
    border-top: 1px solid rgb(27, 21, 81);
}
nav ul .languages .options a:hover {
    background-color: #cacaca;
}
.comname{
    /* border: 2px solid red; */
    /* width: 52.9vw; */
    transform: translateX(0%);
}
nav ul li img{
    width: 50px;
    height: 50px;
    border-radius: 50%;
    margin: 10px;
    filter: hue-rotate(15deg);
}
.comname a{
    text-decoration: none;
    color: white;
    font-family: 'JetBrains Mono', monospace;
    /* border: 2px solid green; */
}

/* Main Section */
main{
    position: relative;
    width: 100%;
    height: calc(100vh - 75px);
    display: flex;
    justify-content: center;
    align-items: center;
    padding-top: 2rem;
    border: 2px solid black;
}
.cont{
    width: 85%;
    height: calc(100%);
    display: flex;
    flex-direction: column;
    align-items: center;
    /* border: 2px solid red; */
}
h1{
    margin-bottom: 1rem;
    /* border: 2px solid green; */
    font-family: 'JetBrains Mono', monospace;
    text-align: center;
    color: rgb(27, 21, 81);
}
/* Search bar */
.search{
    position: relative;
    width: 100%;
    max-width: 50rem;
    height: 4rem;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 1rem;
    margin-bottom: 2rem;
    /* border: 2px solid red; */
}
.search input{
    width: calc(100% - 2rem);
    height: 2.5rem;
    border-radius: 3px;
    border: 1px solid black;
    outline: none;
    padding: 0 1rem;
    /* font-size: 1rem; */
    font-weight: lighter;
}
.search button{
    /* width: 4rem; */
    height: 2.5rem;
    border-radius: 3px;
    border: 1px solid black;
    outline: none;
    background-color: #fff;
    cursor: pointer;
    padding: 0 1rem;
}
.search button:hover{
    background-color: rgb(44, 35, 122);
    color: #fff;
}

/* Content Section */
.content{
    width: 100%;
    height: calc(100vh - 17rem);
    padding-bottom: 2rem;
    /* border: 2px solid gold; */
    overflow-x: visible;
    overflow-y: scroll;
}
.content .programs{
    width: 100%;
    /* height: 100%; */
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 1rem;
    /* border: 2px solid green; */
}
.content .programs .program{
    position: relative;
    width: 100%;
    min-height: 3rem;
    padding: 0 2rem;
    display: flex;
    align-items: center;
    border-radius: 3px;
    border: 2px solid rgba(27, 21, 81, 0.5);
    background-color: #f1f1f1;
    text-decoration: none;
    line-height: 2rem;
    color: rgb(27, 21, 81);
    transition: all 0.3s ease-in-out;
}
.content .programs .program:hover{
    transform: scale(1.01);
}
.content .programs .program:hover::after{
    content: '';
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    background-color: rgba(0, 0, 0, 0.2);
}

/* Media Queries */
@media screen and (max-width: 768px) {
    nav ul li img{
        margin-left: 2rem;
    }
    nav ul .languages .courses{
        padding: 0 1rem;
    }
    main{
        height: calc(100vh - 60px);
    }
    .comname a{
        padding: 0 1rem;
    }
    .search{
        margin-bottom: 1rem;
    }
    .search input, .search button{
        font-size: 0.8rem;
        padding: 0 0.5rem;
        height: 2rem;
    }
    .content .programs .program{
        padding: 0 1rem;
        font-size: smaller;
    }
}

@media screen and (max-width: 600px) {
    nav ul li img{
        width: 35px;
        height: 35px;
        margin-left: 1.5rem;
    }
    .hamburger{
        width: 30px;
        height: 25px;
    }
    nav ul li{
        font-size: 1rem;
    }
}
@media screen and (max-width: 520px){
    nav ul li{
        justify-content: center;
    }
    nav ul li img{
        transform: translateX(-30%);
    }
    nav ul li{
        font-size: 1rem;
    }
    .languages .courses{
        font-size: 0.8rem !important;
    }
    .comname a{
        margin-top: 0;
    }
}
@media screen and (max-width: 400px){
    nav ul{
        justify-content: space-around;
    }
    nav ul li img{
        width: 30px;
        height: 30px;
        margin-left: 1.5rem;
    }
    .hamburger{
        width: 10px;
        height: 10px;
    }
    .comname a{
        font-size: 1rem;
    }
    .languages .courses{
        padding: 0 0.4rem !important;
    }
}
@media screen and (max-width: 350px) {
    nav ul li img{
        width: 30px;
        height: 30px;
        margin-left: 1.3rem;
    }
    .hamburger{
        width: 6px;
        height: 6px;
    }
}

